--- a/sesion03/jest-and-es6/package.json
+++ b/sesion03/jest-and-es6/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/indexj",
+    "start": "babel-node src/index.js",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.10.4",
+    "@babel/node": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "jest": "^26.1.0"
   }
