--- a/sesion19/graphql-complete-api/tsconfig.production.json
+++ b/sesion19/graphql-complete-api/tsconfig.production.json
@@ -1,15 +1,16 @@
 {
-    "compilerOptions": {
-      "lib": [
-        "ES5",
-        "ES6"
-      ],
-      "target": "ES5",
-      "module": "CommonJS",
-      "moduleResolution": "Node",
-      "outDir": "./build",
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "sourceMap": false
-    }
+  "compilerOptions": {
+    "lib": [
+      "ES5",
+      "ES6"
+    ],
+    "target": "ES5",
+    "module": "CommonJS",
+    "esModuleInterop": true,
+    "moduleResolution": "Node",
+    "outDir": "./build",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "sourceMap": false
   }
+}
